--- a/learn-certs-pr/exams/ai-100.yml
+++ b/learn-certs-pr/exams/ai-100.yml
@@ -54,7 +54,7 @@ relatedCertifications:
     uid: certification.azure-ai-engineer
 resources:
 - title: Обучение для получения сертификата 
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Младший инженер по искусственному интеллекту (AI) Azure.’
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Младший инженер по искусственному интеллекту (AI) Azure.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWusKi
 - title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
