--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -76,7 +76,7 @@ relatedCertifications:
     uid: certification.azure-solutions-architect
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Архитектор-эксперт по решениям Azure.’
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Архитектор-эксперт по решениям Azure.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtVsd
 - title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
