--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -58,7 +58,7 @@ relatedCertifications:
     uid: certification.azure-devops
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Инженер Azure DevOps уровня Эксперт
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Инженер Azure DevOps уровня Эксперт'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE41muG
 - title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
