--- a/learn-certs-pr/exams/az-301.yml
+++ b/learn-certs-pr/exams/az-301.yml
@@ -6,14 +6,14 @@ metadata:
 uid: exam.az-301
 displayName: AZ-301
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена было обновлено 4 декабря 2019 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена было обновлено 4 декабря 2019 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
 
   Кандидатами на этот экзамен являются архитекторы решений Azure, которые консультируют заинтересованные стороны и преобразуют бизнес-требования в безопасные, масштабируемые и надежные решения. Кандидаты должны обладать передовым опытом и знаниями по различным аспектам IT-операций, включая создание сетей, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, управление данными, бюджетирование и управление. Эта роль требует управления тем, как решения в каждой области влияют на общее решение. Кандидаты должны обладать знаниями в области управления Azure, разработки Azure и DevOps и обладать навыками на уровне экспертов по крайней мере в одном из этих доменов.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: определение требований к рабочей нагрузке; проектирование для идентификации и безопасности; проектирование решения для платформы данных; разработка стратегии обеспечения непрерывности деятельности; проектирование развертывания, миграции и интеграции; а также разработка стратегии инфраструктуры.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHD
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-301?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-301&examname=Exam%20AZ-301:%20Microsoft%20Azure%20Architect%20Design&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-301
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-301&examname=Экзамен%20AZ-301:%20Дизайн%20архитектуры%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-301
 locales:
 - en
 - ja
