--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-900
 displayName: AZ-900
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена было обновлено 23 октября 2019 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена было обновлено 23 октября 2019 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
 
   Этот экзамен предназначен для кандидатов, желающих продемонстрировать базовые знания облачных сервисов, а также того, как сервисы представлены в Microsoft Azure. Экзамен предназначен для кандидатов, не имеющих технического опыта, например, тех кто занимается продажей или покупкой облачных решений и услуг, или тех, кто имеет хоть какое-то отношение к облачным решениям и службам, а также тех, кто имеет технический опыт и хочет подтвердить свой базовый уровень знаний облачных сервисов. Технический опыт в области IT не требуется, однако некоторые общие знания или опыт в области IT могли бы быть полезны.
 
@@ -15,7 +15,7 @@ subTitle: 'Этот экзамен позволяет оценить вашу с
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-900&examname=Exam%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-900
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-900&examname=Экзамен%20AZ-900:%20Основы%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-900
 locales:
 - en
 - ja
