--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
   
-  <div style="color:red"><br/><strong>NOTE&#58; Эта сертификация будет недоступна до 31 декабря 2019 года</strong></div>
+  <div style="color:red"><br/><strong>NOTE&#58; Эта сертификация будет недоступна до 27 января 2020 года</strong></div>
 subTitle: Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
 levels:
 - advanced
