--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -12,7 +12,7 @@ summary: |-
 
   Архитекторы решений имеют опыт работы в функциональных и технических дисциплинах Power Platform и приложений в Dynamics 365, управляемых моделями. Архитекторы решений должны быть в состоянии содействовать проектным решениям на протяжении всего процесса разработки, конфигурации, интеграции, инфраструктуры, безопасности, доступности, хранения и управления изменениями. Эта роль уравновешивает бизнес-потребности проекта, отвечая функциональным и нефункциональным требованиям.
   
-  <div style="color:red"><br/><strong>NOTE&#58; Этот экзамен будет недоступен до 31 декабря 2019 года</strong></div>  
+  <div style="color:red"><br/><strong>NOTE&#58; Этот экзамен будет недоступен до 27 января 2020 года</strong></div>  
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование решений и анализ требований; разработка решений; и внедрение решений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440oW
