--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -12,7 +12,7 @@ summary: |-
 
   Архитектор решений должен обладать обширными знаниями и опытом, охватывающими потребности бизнеса и возможности продукта. Архитектор решений должен обладать широкими функциональными и техническими знаниями в качестве разработчика или функционального консультанта в одной из следующих областей&#58; Finance, Manufacturing, или Supply Chain Management. Кроме того, они обладают обширными знаниями предметной области в одной или нескольких отраслях клиентов.
   
-  <div style="color:red"><br/><strong>NOTE&#58; Этот экзамен будет недоступен до 31 декабря 2019 года</strong></div>
+  <div style="color:red"><br/><strong>NOTE&#58; Этот экзамен будет недоступен до 27 января 2020 года</strong></div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: определение требований решения; разработка компонентов решения; и определение стратегии тестирования решений и управления.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
