--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   Архитекторы решений для приложений, основанных на моделях Microsoft Power Apps в Dynamics 365, ведут успешные реализации и фокусируются на том, чтобы решения удовлетворяли более широкие деловые и технические потребности организаций.  
   
-  <div style="color:red"><br/><strong>NOTE&#58; Эта сертификация будет недоступна до 31 декабря 2019 года</strong></div>
+  <div style="color:red"><br/><strong>NOTE&#58; Эта сертификация будет недоступна до 27 января 2020 года</strong></div>
 subTitle: Архитекторы решений для приложений, основанных на моделях Microsoft Power Apps в Dynamics 365, ведут успешные реализации и фокусируются на том, чтобы решения удовлетворяли более широкие деловые и технические потребности организаций.
 levels:
 - advanced
