--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -6,8 +6,6 @@ metadata:
 uid: exam.az-400
 displayName: AZ-400
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена было обновлено 3 декабря 2019 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
-
   Кандидаты на этот экзамен - это профессионалы DevOps, которые объединяют людей, процессы и технологии для непрерывного предоставления ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям. Профессионалы DevOps оптимизируют поставку, оптимизируя методы работы, улучшая взаимодействие и совместную работу, а также создавая автоматизацию. Они разрабатывают и венедряют стратегии для кода приложений и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
 
   Кандидаты должны обладать навыками Agile-практик. Они должны быть знакомы с администрированием и разработкой в Azure и обладать экспертизой хотя бы в одной из этих областей. Профессионалы в Azure DevOps должны быть способны спроектировать и реализовать DevOps-практики для контроля версий, соответствия стандартами, infrastructure-as-code, управление настройкой, сборки, выпуска и тестирования, используя технологии Azure.
@@ -24,7 +22,6 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена было обновлено 3 декабря 2019 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.
 - Проектирование стратегии DevOps (20-25%)
 - Реализация процессов разработки DevOps (20-25%)
 - Внедрение непрерывной интеграции (10-15%)
@@ -45,6 +42,7 @@ paths:
 - uid: learn.azdo.build-applications-with-azure-devops
 - uid: learn.azdo.deploy-applications-with-azure-devops
 - uid: learn.azdo.automate-deployments-azure-devops
+- uid: learn.azdo.capture-feedback-monitoring
 courses:
 - uid: course.az-400t01
 - uid: course.az-400t02
