--- a/learn-certs-pr/exams/mb-320.yml
+++ b/learn-certs-pr/exams/mb-320.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Supply Chain Management, Manufacturing для управление цепочками поставок, производством
+title: Microsoft Dynamics 365 Supply Chain Management, Manufacturing
 metadata:
-  title: 'Экзамен MB-320: Microsoft Dynamics 365 Supply Chain Management, Manufacturing для управление цепочками поставок, производством'
-  description: 'Экзамен MB-320: Microsoft Dynamics 365 Supply Chain Management, Manufacturing для управление цепочками поставок, производством'
+  title: 'Экзамен MB-320: Microsoft Dynamics 365 Supply Chain Management, Manufacturing'
+  description: 'Экзамен MB-320: Microsoft Dynamics 365 Supply Chain Management, Manufacturing'
 uid: exam.mb-320
 displayName: MB-320
 summary: |-
