--- a/learn-certs-pr/exams/mb-330.yml
+++ b/learn-certs-pr/exams/mb-330.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Supply Chain Management​ по управлению цепочками поставок
+title: Microsoft Dynamics 365 по управлению цепочками поставок
 metadata:
-  title: 'Экзамен MB-330: Microsoft Dynamics 365 Supply Chain Management​ по управлению цепочками поставок'
-  description: 'Экзамен MB-330: Microsoft Dynamics 365 Supply Chain Management​ по управлению цепочками поставок'
+  title: 'Экзамен MB-330: Microsoft Dynamics 365 по управлению цепочками поставок'
+  description: 'Экзамен MB-330: Microsoft Dynamics 365 по управлению цепочками поставок'
 uid: exam.mb-330
 displayName: MB-330
 summary: |-
