--- a/learn-certs-pr/d365-functional-consultant-field-service.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service.yml
@@ -46,7 +46,7 @@ exams:
 - uid: exam.mb-240
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified:: Dynamics 365 для помощника функционального консультанта по обслуживанию на местах.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 для помощника функционального консультанта по обслуживанию на местах.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I72
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
