--- a/learn-certs-pr/d365-functional-consultant-financials.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials.yml
@@ -51,7 +51,7 @@ exams:
 - uid: exam.mb-310
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified:: Dynamics 365 Finance Functional Consultant Associate'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svL
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
