--- a/learn-certs-pr/exams/az-102.yml
+++ b/learn-certs-pr/exams/az-102.yml
@@ -8,8 +8,8 @@ displayName: AZ-102
 summary: |-
   <div style='color&#58; red; font-weight&#58; bold;'>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 30 Июнь 2019 ГОДА. Примечание&#58; Экзамен будет отменен в 23:59 по центральному стандартному времени</div>
   <br/> 
-  Этот экзамен предназначен только для кандидатов, которые сдали [Экзамен 70-533](https://www.microsoft.com/ru-ru/learning/exam-70-533.aspx)&#58; Внедрение инфраструктурных решений Microsoft Azure. Если вы не сдавали экзамен 533, вы не сможете получить сертификат, пройдя этот экзамен. 
-
+  Этот экзамен предназначен только для кандидатов, которые сдали [Экзамен 70-533&#58;](https://www.microsoft.com/ru-ru/learning/exam-70-533.aspx) Внедрение инфраструктурных решений Microsoft Azure. Если вы не сдавали экзамен 533, вы не сможете получить сертификат, пройдя этот экзамен. 
+  <br/> 
   Переходный экзамен предназначен для людей, которые уже продемонстрировали навыки в контентной области, передав существующий экзамен (ы), чтобы новые сертификационные экзамены на основе ролей были заменены. Они охватывают разницу между текущей сертификацией и тем, что мы ожидаем от людей, которые получат новую сертификацию. Мы не хотим повторно тестировать людей на том же контенте, где они уже продемонстрировали компетентность, сдав существующий экзамен.
 
   Переходные экзамены охватывают чистый новый контент, Контент, который не был охвачен достаточно глубоко, и контент по аспектам технологии, которые, вероятно, изменились с тех пор, как кто-то сдал экзамен. В результате переходный экзамен не короче обычного экзамена, а больше ориентирован на ключевые задачи и навыки, которые не были оценены на существующем экзамене или заменяемой сертификации.
@@ -17,7 +17,7 @@ summary: |-
   Кандидатами на этот экзамен являются Azure Administrators, которые управляют облачными службами, которые охватывают возможности хранения, безопасности, сетей и вычислений в облаке. Кандидаты имеют глубокое понимание каждой службы в течение всего жизненного цикла IT и принимают запросы на инфраструктурные услуги, приложения и среды. Они дают рекомендации по использованию услуг для обеспечения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости.
 
   Кандидаты на этот экзамен должны обладать навыками работы с PowerShell и интерфейсом командной строки. Кандидаты должны иметь базовые знания о портале Azure, шаблонах ARM, операционных системах, виртуализации, облачной инфраструктуре, структурах хранения и сети.
-subTitle: 'Этот экзамен предназначен только для кандидатов, которые сдали [экзамен 70-533](https://www.microsoft.com/ru-ru/learning/exam-70-533.aspx): Внедрение инфраструктурных решений Microsoft Azure. Если вы не сдали экзамен 533, вы не получите сертификат, сдав этот экзамен.'
+subTitle: 'Этот экзамен предназначен только для кандидатов, которые сдали экзамен 70-533: Внедрение инфраструктурных решений Microsoft Azure. Если вы не сдали экзамен 533, вы не получите сертификат, сдав этот экзамен.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwA
 practiceTestUrl: https://www.mindhub.com/product-p/mu-az-102_p.htm?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
