--- a/learn-certs-pr/exams/az-202.yml
+++ b/learn-certs-pr/exams/az-202.yml
@@ -8,7 +8,8 @@ displayName: AZ-202
 summary: |-
   <div style='color&#58; red; font-weight&#58; bold;'>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 31 МАРШ 2019 ГОДА. Примечание&#58; Экзамен будет отменен в 23:59 по центральному стандартному времени</div>
   <br/> 
-  Этот экзамен предназначен только для кандидатов, которые сдали [Экзамен 70-532](https://www.microsoft.com/ru-ru/learning/exam-70-532.aspx)&#58; Разработка решений Microsoft Azure. Если вы не сдали экзамен 532, вы не получите сертификат, сдав этот экзамен.
+  
+  Этот экзамен предназначен только для кандидатов, которые сдали [Экзамен 70-532&#58;](https://www.microsoft.com/ru-ru/learning/exam-70-532.aspx) Разработка решений Microsoft Azure. Если вы не сдали экзамен 532, вы не получите сертификат, сдав этот экзамен.
 
   Переходный экзамен предназначен для людей, которые уже продемонстрировали навыки в контентной области, передав существующий экзамен (ы), чтобы новые сертификационные экзамены на основе ролей были заменены. Они охватывают разницу между текущей сертификацией и тем, что мы ожидаем от людей, которые получат новую сертификацию. Мы не хотим повторно тестировать людей на том же контенте, где они уже продемонстрировали компетентность, сдав существующий экзамен.
 
@@ -19,7 +20,7 @@ summary: |-
   Кандидаты должны обладать навыками разработки приложений и сервисов с использованием инструментов и технологий Azure, включая хранение, безопасность, вычисление и связь.
 
   Кандидаты должны иметь по крайней мере один год опыта разработки масштабируемых решений на всех этапах разработки программного обеспечения и быть опытными по крайней мере в одном поддерживаемом облаком языке программирования.
-subTitle: 'Этот экзамен предназначен только для кандидатов, которые сдали [экзамен 70-532](https://www.microsoft.com/ru-ru/learning/exam-70-532.aspx): Разработка решений Microsoft Azure. Если вы не сдали экзамен 532, вы не получите сертификат, сдав этот экзамен.'
+subTitle: 'Этот экзамен предназначен только для кандидатов, которые сдали экзамен 70-532: Разработка решений Microsoft Azure. Если вы не сдали экзамен 532, вы не получите сертификат, сдав этот экзамен.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJV3
 scheduleExamUrl: https://examregistration.microsoft.com/
